cluster/projects/fopido/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fopido
spec:
  template:
    spec:
      containers:
        - name: fopido
      imagePullSecrets:
        - name: github-container-registry
