cluster/projects/fopido/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fopido
spec:
  entryPoints:
    - websecure
  middlewares:
    - https-redirectscheme
  routes:
    - match: Host(`docs.forteapiano-unterricht.de`)
      kind: Rule
      services:
        - name: fopido
          port: 80
  tls:
    certResolver: letsencrypt
